--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
         <module>feign</module>
         <module>ribbon</module>
         <module>zuul</module>
-        <module>hystrix</module>
+        <module>elk</module>
+        <module>server-zipkin</module>
+        <module>service-ui</module>
+        <module>service-ui1</module>
+        <module>service-admin</module>
     </modules>
 
     <parent>
