升级cloud的版本到Finchley.SR2

--- a/server-zipkin/pom.xml
+++ b/server-zipkin/pom.xml
@@ -28,8 +28,8 @@
         </dependency>
 
         <dependency>
-            <groupId>io.zipkin.java</groupId>
-            <artifactId>zipkin-server</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
         <dependency>
