--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -6,7 +6,26 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/spring-cloud-samples/config-repo
+          uri: https://github.com/xjz1842/config-repo.git
+          username: xjz1842
+          password: 905159zxj
+
+  rabbitmq:
+      host: 127.0.0.1
+      port: 5672
+      username: admin
+      password: admin
 
 server:
   port: 8888
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+management:
+  security:
+    enabled: false
+
+
+
